--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": ">=10.0.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,12 +23,12 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.20",
-    "next": "^15.1.3",
+    "next": "16.0.1",
     "pdfjs-dist": "^5.4.394",
     "postcss": "^8.4.49",
-    "react": "^18.3.1",
+    "react": "19.2.0",
     "react-contenteditable": "^3.3.7",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.2.0",
     "react-frame-component": "^5.2.7",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
@@ -42,10 +42,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^22.10.2",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.6",
     "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3",
+    "eslint-config-next": "16.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.4.2",
