--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.20",
+    "mammoth": "^1.8.0",
     "next": "16.0.1",
     "pdfjs-dist": "^5.4.394",
     "postcss": "^8.4.49",
